通过Java安全管理器限制